finish auth flow

--- a/webapp/app.html
+++ b/webapp/app.html
@@ -8,6 +8,6 @@
 		%sveltekit.head%
 	</head>
 	<body class="min-h-screen bg-gradient-to-b from-slate-700 to-slate-800">
-		<div id="svelte">%sveltekit.body%</div>
+		<div id="main">%sveltekit.body%</div>
 	</body>
 </html>
