--- a/webapp/app.html
+++ b/webapp/app.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Trufel - link collector" />
-        <script src="https://cdn.tailwindcss.com"></script>
-        %sveltekit.head%
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Trufel - link collector" />
+		<script src="https://cdn.tailwindcss.com"></script>
+		%sveltekit.head%
 	</head>
-	<body class="min-h-screen bg-gradient-to-b from-slate-700 to-slate-800">
-		<div id="main">%sveltekit.body%</div>
+	<body
+		data-sveltekit-preload-data="hover"
+		class="min-h-screen bg-gradient-to-b from-slate-700 to-slate-800"
+	>
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
