--- a/webapp/app.html
+++ b/webapp/app.html
@@ -10,8 +10,7 @@
 	</head>
 	<body
 		data-sveltekit-preload-data="hover"
-		class="min-h-screen bg-gradient-to-b from-slate-700 to-slate-800"
-	>
+		class="min-h-screen bg-gradient-to-b from-slate-700 to-slate-800">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
