--- a/webapp/app.html
+++ b/webapp/app.html
@@ -6,6 +6,8 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Trufel - link collector" />
+    <meta name="referrer" content="no-referrer" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     %sveltekit.head%
 </head>
