--- a/webapp/app.html
+++ b/webapp/app.html
@@ -12,10 +12,12 @@
     %sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" class="flex flex-col min-h-screen min-w-96 bg-gradient-to-b from-slate-700 to-slate-800">
+<body data-sveltekit-preload-data="hover" class="bg-gradient-to-b from-slate-700 to-slate-800">
     <!-- Overlay element -->
     <div id="overlay" class="fixed hidden z-40 w-screen h-screen inset-0 bg-gray-900 bg-opacity-60"></div>
-     %sveltekit.body%
+    <div class="flex flex-col min-h-screen min-w-96">
+        %sveltekit.body%
+    </div>
 </body>
 
 </html>
